--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lib"
   ],
   "scripts": {
-    "clean-lib": "rimraf lib",
-    "clean-tmp": "rimraf .tmp",
-    "clean": "npm run clean-lib && npm run clean-tmp",
+    "clean": "rimraf lib .tmp",
     "build": "npm run clean && babel ./src -d lib",
     "test": "npm run clean && mocha --compilers js:babel-register --recursive test"
   },
@@ -45,7 +43,9 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
+    "gm": "^1.22.0",
     "mocha": "^2.4.5",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "sinon": "^1.17.4"
   }
 }
