--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wdio-visual-regression-service",
   "version": "0.0.1",
   "description": "Visual regression testing for WebdriverIO",
-  "main": "launcher.js",
+  "main": "index.js",
   "files": [
     "*.md",
     "src",
@@ -10,8 +10,11 @@
   ],
   "scripts": {
     "clean": "rimraf lib .tmp",
+    "phantom": "phantomjs --webdriver=4444",
     "build": "npm run clean && babel ./src -d lib",
-    "test": "npm run clean && mocha --compilers js:babel-register --recursive test"
+    "test": "npm run test:unit && npm run test:wdio",
+    "test:unit": "npm run clean && mocha --compilers js:babel-register test/unit/**/*.test.js",
+    "test:wdio": "npm run clean && wdio ./test/wdio/wdio.config.js"
   },
   "repository": {
     "type": "git",
@@ -45,7 +48,10 @@
     "chai": "^3.5.0",
     "gm": "^1.22.0",
     "mocha": "^2.4.5",
+    "phantomjs": "^1.9.20",
     "rimraf": "^2.5.2",
-    "sinon": "^1.17.4"
+    "sinon": "^1.17.4",
+    "wdio-mocha-framework": "^0.3.1",
+    "webdriverio": "^4.0.9"
   }
 }
