--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build": "npm run clean && babel ./src -d lib",
     "test": "npm run test:unit && npm run test:wdio",
     "test:unit": "npm run clean && mocha --compilers js:babel-register test/unit/**/*.test.js",
-    "test:wdio": "npm run clean && wdio ./test/wdio/wdio.config.js"
+    "test:wdio": "npm run clean && wdio ./test/wdio/wdio.config.js",
+    "prepublish": "npm run build",
+    "release": "np"
   },
   "repository": {
     "type": "git",
@@ -50,6 +52,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
+    "np": "^2.10.0",
     "phantomjs": "^1.9.20",
     "rimraf": "^2.5.2",
     "sinon": "^1.17.4",
