--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "babel-runtime": "^6.9.0",
     "debug": "^2.2.0",
-    "fs-promise": "^0.5.0",
+    "fs-extra": "^3.0.1",
     "lodash": "^4.13.1",
     "node-resemble-js": "0.0.5",
     "platform": "^1.3.1",
