--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
+    "nock": "^9.2.3",
     "np": "^2.10.0",
     "phantomjs": "^1.9.20",
     "rimraf": "^2.5.2",
