--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^3.0.1",
     "lodash": "^4.13.1",
     "node-resemble-js": "0.0.5",
+    "nodeclient-spectre": "^1.0.3",
     "platform": "^1.3.1",
     "wdio-screenshot": "^0.6.0"
   },
@@ -52,6 +53,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
+    "nock": "^9.2.3",
     "np": "^2.10.0",
     "phantomjs": "^1.9.20",
     "rimraf": "^2.5.2",
