--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "webdriverio": "^4.0.7"
   },
   "dependencies": {
-    "backstop-reporter": "^4.0.4",
     "babel-runtime": "^6.9.0",
+    "backstop-reporter": "^4.0.4",
     "debug": "^2.2.0",
     "fs-extra": "^3.0.1",
     "lodash": "^4.13.1",
     "node-resemble-js": "0.0.5",
     "nodeclient-spectre": "^1.0.3",
-    "opn": "^6.0.0",
+    "open": "^6.3.0",
     "platform": "^1.3.1",
     "wdio-screenshot": "^0.6.0"
   },
