--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lodash": "^4.13.1",
     "node-resemble-js": "0.0.5",
     "nodeclient-spectre": "^1.0.3",
-    "open": "^6.3.0",
+    "opn": "5.5.0",
     "platform": "^1.3.1",
     "wdio-screenshot": "^0.6.0"
   },
